# appear-receiver

./: README.md
api/: Dockerfile  README.md  main.py  pyproject.toml
api/app/: __main__.py  app.py  data_models.py  mappings.py  theme_mapping.py
api/app/classifier/: base.py  sklearn_pipeline.py  tfidf.py
api/app/data_models/: prediction.py
api/app/incidents/: tracker.py
api/app/statistics/: stats_collector.py  stats_exporter.py
api/data/: statistics.json
api/resources/: __init__.py  baseline_tfidf.pt
bot/: README.md  main.py
notebooks/: inference_itog.ipynb  train LaBSE-en-ru.ipynb  train_baselines.ipynb  train_ensemble_itog.ipynb
