[tool.poetry]
name = "api"
version = "0.1.0"
description = "REST API for text classification"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.3.2"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
numpy = "1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
